# hyper-canny

./: .codecov.yml  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  meson.build  setup.py
data/test/: cute.hdf5  cute.nc  mi.nc
doc/: Doxyfile  README.md
examples/: mondriaan.py
hyper_canny/: __init__.py  c_bindings.py  chc.cpp  chc.pxd  chc.pyx
python/: README.rst  setup.py
python/hyper_canny/: __init__.py  c_bindings.py
scripts/: convert_image.py  convert_jpg.py  coverage.sh  generate-header.sh  premeson.sh
src/: base.hh  meson.build  save_png.hh
src/base/: console.cc  console.hh  exceptions.hh  filesystem.hh  format.hh  generator.hh  iterating.hh  meson.build  optional.hh  pointer_range.hh  string_utils.hh  timer.hh
src/cl-info/: main.cc  meson.build
src/cl-util/: base.hh  compile.cc  compile.hh  get_gpu_context.cc  get_gpu_context.hh  info.cc  info.hh  meson.build  set_args.hh  timing.cc  timing.hh
src/examples/: meson.build
src/examples/hdf5/: main.cc
src/examples/hilbert/: main.cc
src/examples/netcdf/: main.cc
src/hyper-canny/: main.cc  meson.build
src/misc/: argparse.hh  colour.hh  colours.cc  console.hh  fancy_string.hh  log.cc  long_string.hh  meson.build
src/module/: double_threshold.cc  edge_thinning.cc  meson.build  module.hh  smooth_gaussian.cc  smooth_sobel.cc
src/numeric/: brent.hh  canny.hh  convolution.hh  counter.hh  fftw_traits.cc  fftw_traits.hh  filters.hh  hilbert.cc  hilbert.hh  meson.build  ndarray.hh  ndarray_utils.hh  nditerator.hh  ndrange.hh  netcdf.hh  numeric.hh  periodic_iterator.hh  periodic_range.hh  pointer_range.hh  rfft.hh  romberg.hh  slice.hh  support.hh  tabulated.hh  types.hh
test/: meson.build
test/base/: base.cc  meson.build  string-split.cc  strings.cc
test/gmock/: meson.build
test/gmock/src/: meson.build
test/gtest/: meson.build
test/gtest/src/: meson.build
test/numeric/: convolve.cc  filters.cc  meson.build  ndarrays.cc  netcdf.cc  periodic.cc  rfft.cc
